# project-amazon

./: .gitignore  .pre-commit-config.yaml  .renvignore  README.md  baseline_sample.py  det.py  entropy.ipynb  gibbs.ipynb  gibbs_theta.ipynb  hmc.py  mpc.sh  plot.ipynb  plot_rho_cl.sh  plot_theta.ipynb  plots.py  pyproject.toml  quick_script.py  quick_script_uncertainty.py  run.sh  run_rho_cl.sh  run_sampler.sh  setup.py  solvers.py
R_code/: setup.R
bash_files/: density.sh  hmc_sampling.sh  mpc_hmc.sh  mpc_hmc_sp.sh  relative_entropy.sh  relative_entropy_joint.sh  sample_baseline_gamma.sh  sample_baseline_theta.sh
bash_scripts/: plot_rho_cl.sh  run_rho_cl.sh
gams/: hmc_24sites.gms
notebooks/: asym_adj_costs.ipynb  biodiversity.ipynb  check stan_vs_r_prior.ipynb  check_gurobi.ipynb  check_identifiability.ipynb  check_pre_div_trajectories.ipynb  check_sigma_correction.ipynb  check_sparse.ipynb  eda.ipynb  eda_gamma.ipynb  eda_theta.ipynb  entropy.ipynb  entropy_gamma.ipynb  entropy_theta.ipynb  figure_transfer.ipynb  hmc_demo.ipynb  j_edits.ipynb  maps.ipynb  mpc.ipynb  n_species.ipynb  new_fitted_values functions.ipynb  new_gammas.ipynb  new_ps.ipynb  payment_structure.ipynb  ps_1043.ipynb  ps_78.ipynb  sample_priors.ipynb  stationary_distribution.ipynb  trajectories.ipynb  trajectories_deterministic.ipynb
pysrc/: plots.py
rsrc/: _masterfile_all.R  setup.R
scripts/: adjusted_sampler.py  ambiguity_model.py  baseline_sampler.py  conduction.py  conduction_det.py  conduction_hmc.py  conduction_mpc.py  create_plots.py  create_plots_stan.py  create_plots_temp.py  det.py  deterministic_model.py  hmc.py  mpc_computation.py  mpc_simulation.py  plots.py  quick_script.py  run_ambiguity_model.py  run_det_model.py  sample_baseline_gamma.py  sample_baseline_theta.py  sample_posterior.py  sample_prior.py  sampler.py  script_det.py  stan_sampler.py  stochastic_model.py
src/: plots.py  solvers.py
stan_model/: adjusted.stan  baseline.stan  mpc_adjusted.stan
stan_models/: basic_model.stan  calibrated_coef_priors.stan  calibrated_lognormal_priors.stan  calibrated_priors.stan  full_model.stan  sparse_speedup.stan
temp_script/: gibbs_theta.ipynb
(+364 files in other folders)
