[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pysrc"]

[project]
name = "project-amazon"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.25.2",
    "pandas >= 2.1.0",
    "geopandas >= 0.14.0",
    "pyomo >= 6.6.2",
    "cmdstanpy >= 1.2.0",
    "casadi >= 3.6.3",
    "scipy >= 1.11.1",
    "matplotlib >= 3.7.3",
    "seaborn >= 0.12.2",
    "scikit-learn >= 1.3.0",
    "gamsapi == 45.1.0",
]

[project.optional-dependencies]
notebooks = ["ipykernel"]
dev = ["black", "ruff", "pre-commit"]
all = ["project-amazon[notebooks, dev]"]

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    "I002",
]
